Closed Bug 1235613 Opened 8 years ago Closed 8 years ago

gfxCriticalError/Note message should be unique

Categories

(Core :: Graphics, defect)

43 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox46 --- fixed

People

(Reporter: milan, Assigned: milan)

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file)

We don't have a way of tying back the crash report annotations to the source code other than by the uniqueness of the string.  There are a few places where we have the duplicates.
Assignee: nobody → milan
Whiteboard: [gfx-noted]
Comment on attachment 8702658 [details]
MozReview Request: Bug 1235613: Make gfxCriticalError/Note strings in gfx/ unique. r?jrmuizel

https://reviewboard.mozilla.org/r/29167/#review25975
Attachment #8702658 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/mozilla-central/rev/ef5be3776c9a
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: