Bug 1235613 - Make gfxCriticalError/Note strings in gfx/ unique. r=jrmuizel